chore: fixed a spacing issue

--- a/resume/styles/resume-template-1.css
+++ b/resume/styles/resume-template-1.css
@@ -51,6 +51,10 @@ strong {
     font-weight: bold;
 }
 
+.main-header-content {
+    margin-top: 5px;
+}
+
 .section-header {
     display: flex;
     justify-content: space-between;
